--- a/campizza-backend/frontend/public/index.html
+++ b/campizza-backend/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Summer fun at Camp Izza for children 5-11 years old. Safe & nurturing environment. Daily Activities: Waterplay, Sports, Arts & Crafts, Games, & Entertainment."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/page-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
